# pydantic-srlinux

./: .gitignore  README.md  generate_models.py  generate_models_schema.py  lazy_parse.py  pydantify.py  pyproject.toml  test.yml  test_pydantify.py  yang_map.py  yang_map.yml
example/: README.md  client.py  diagrams.drawio  interface.py  interface_v2.py  interface_v3.py  interfacev3.py  log.py  revert.sh  test_pydantify.py  vlan.py  vlans.py
example/tests/: test_interface_v3.py
example/v1/: interface.py
example/v2/: interface.py
example/v3/: interface.py
example/v3/tests/: test_interface.py
example/v4/: common.py  config.yaml  hosts.yaml  interface.py  isis.py  main.py  netinst.py
models/: acl.py  interfaces.py  platform.py  qos.py
models/interfaces/: out.py
pydantic_srlinux/models/: acl.py  bfd.py  interfaces.py  network-instance.py  network_instance.py  platform.py  qos.py  routing_policy.py  system.py  tunnel.py  tunnel_interfaces.py
schemas/: acl_schema.json  bfd_schema.json  interfaces_schema.json  network_instance_schema.json  platform_schema.json  qos_schema.json  routing_policy_schema.json  system_schema.json  tunnel_interfaces_schema.json  tunnel_schema.json
