[project]
name = "pydantic-srlinux"
version = "0.1.0"
description = "Pydantic models for Nokia SR Linux"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "datamodel-code-generator",
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "pydantify>=0.7.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_srlinux"]

[tool.uv.sources]
datamodel-code-generator = { git = "https://github.com/dpeachey/datamodel-code-generator", rev = "fix-collapse-root-model-when-list-contains-fields-with-constraints" }
