[project]
name = "pydantic-srlinux"
version = "0.1.0"
description = "Pydantic models for Nokia SR Linux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.10.6"]

[dependency-groups]
dev = [
    "pydantify>=0.7.2",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.9.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_srlinux"]

[tool.uv.sources]
pydantify = { git = "https://github.com/pydantify/pydantify", rev = "9b185c4" }
